"Updated CSS classes for form validation, adjusted toast z-index, and fixed id/email availability check in add-edit-client component"
This commit includes the following changes:

1. Updated CSS classes for form validation in `form-field.scss` and `dashboard-navbar.component.scss`.
2. Adjusted the z-index value of the toast component in `p-toast.scss`.
3. Fixed the id and email availability check in the `add-edit-client.component.ts` file by setting `idNotAvailable` to true instead of false in the `handleIdError` method.

--- a/src/styles/form-field.scss
+++ b/src/styles/form-field.scss
@@ -372,7 +372,7 @@ input::-webkit-inner-spin-button {
 .input-number {
   &.input-group {
     background: #ffffffb2;
-    border: 1px solid #ced4da;
+    border: 1px solid var(--second-border-color);
     border-radius: 10px;
     .form-control {
       height: 2.9rem;
@@ -401,5 +401,15 @@ input::-webkit-inner-spin-button {
         }
       }
     }
+  }
+}
+.form-control.is-valid,
+.was-validated .form-control:valid {
+  background-image: url(../assets/images/auth/valid.svg) !important;
+  border: 1px solid var(--second-border-color) !important;
+  &:dir(rtl) {
+    padding-left: calc(1.5em + 0.75rem);
+    padding-right: 0.7rem;
+    background-position: left calc(0.375em + 0.1875rem) center;
   }
 }
