--- a/src/styles/p-toast.scss
+++ b/src/styles/p-toast.scss
@@ -1,6 +1,5 @@
 .p-toast {
   opacity: 1 !important;
-  z-index: 1000000000 !important;
   .p-toast-message {
     .p-toast-message-content {
       background-color: #fff !important;
